<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_select"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="18dp"
            android:src="@drawable/user_image_placeholder"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorForeground"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="78dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:paddingBottom="24dp"
            app:errorTextColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorForeground"
            android:fontFamily="@font/spacemono_regular"
            android:hint="@string/hint_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:background="@color/colorInputBackground"
                android:textColor="@color/colorForeground"
                android:inputType="text"
                android:fontFamily="@font/spacemono_regular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bio_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingBottom="24dp"
            app:errorTextColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorForeground"
            android:fontFamily="@font/spacemono_regular"
            android:hint="@string/hint_bio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bio_edit_text"
                android:background="@color/colorInputBackground"
                android:textColor="@color/colorForeground"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/spacemono_regular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/spacemono_bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/button_save"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/spacemono_bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/button_cancel"/>

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:visibility="gone"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_margin="4dp"
            android:indeterminate="true"
            android:max="100"
            android:backgroundTint="@color/colorAccent"
            android:indeterminateTint="@color/colorPrimary"/>

    </LinearLayout>

</ScrollView>